# gfonts

./: .gitignore  README.md  pyproject.toml
scripts/: render_contact_sheets.py  tag_fonts.py
src/gfonts/: __init__.py  _infer_lines.py  _svg_engine.py  catalog.py  render.py  schema.py
src/gfonts/_cli/: __init__.py  curate.py
src/gfonts/_js/: render_text_style_svg.js  style_utils.js
src/gfonts/data/: allowlist.json  blacklist.json  script_fonts.json
